fix views to be mobile-responsive, adjusted section spacing, checked all views

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -83,21 +83,13 @@ i{
     text-align: center;
 }
 
-/* about section */
-
-
-
-/* featured section */
-
-
-
 .circle-img-sm {
     width: 200px;
     height: 200px;
 }
 .circle-img-md {
-    width: 300px;
-    height: 300px;
+    width: 18em;
+    height: 18rem;
     border-radius:50%;
     /* margin: 20px; */
 }
